# clean-architecture

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  inject_configuration.py  requirements.txt
auctions/auctions/: admin.py  apps.py  models.py  pyproject.toml  requirements.txt  settings.py  setup.py  urls.py  views.py  wsgi.py
auctions/auctions/application/interfaces/: __init__.py  email_gateway.py
auctions/auctions/application/ports/: __init__.py
auctions/auctions/application/repositories/: auctions.py
auctions/auctions/application/use_cases/: __init__.py  placing_bid.py  withdrawing_bids.py
auctions/auctions/auctions/: __init__.py
auctions/auctions/auctions/application/ports/: __init__.py  email_gateway.py  payment_provider.py
auctions/auctions/auctions/application/queries/: __init__.py  auctions.py
auctions/auctions/auctions/application/repositories/: __init__.py  auctions.py
auctions/auctions/auctions/application/use_cases/: __init__.py  ending_auction.py  (+3 more)
auctions/auctions/auctions/domain/: events.py  exceptions.py
auctions/auctions/domain/: types.py
auctions/auctions/domain/entities/: __init__.py  auction.py  bid.py
auctions/auctions/domain/factories/: dollars.py
auctions/auctions/domain/value_objects/: __init__.py  currency.py  money.py
auctions/auctions/infrastructure/adapters/: __init__.py  dummy_email_gateway.py
auctions/auctions/infrastructure/repositories/: __init__.py  auctions.py
auctions/auctions/migrations/: 0001_initial.py  0002_auto_20181101_1727.py
auctions/auctions/tests/: factories.py
(+359 files in other folders)
