[tool.poetry]
name = "auctions"
version = "1.0.0"
description = ""
authors = ["Sebastian Buczyński <nnplaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
injector = "^0.16.2"
foundation = {path = "../foundation"}

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
